--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -126,7 +126,7 @@ body {
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        border: 1px solid var(--light_graylist_blue_2);
+                        // border: 1px solid var(--light_graylist_blue_2);
                         width: var(--image-width);
                         height: var(--image-height);
                         border-radius: 50%;
